--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 						mi jako značiš i da me svaka tvoja poruka usreći na svoj način. Nekad pomislim da te smaram jer ti svaki dan pišem, ali ne mogu da mislim o tebi i da ne napišem ništa. Prva misao ujutru kada ustanem si ti,
 						a isto tako i poslednja pre nego što zaspim. Svaki dan razmišljam kada i kako da dodjem u Niš, znam da je prelep grad, a još lepši jer ti živiš u njemu. Na početku nisam ni mogao da sanjam da ću sada nešto ovako
 						praviti za tebe. Sećam se kada si mi izašla na onoj aplikaciji, pomislio sam da nema potrebe ni da te dodam jer si prelepa i verovatno me nikad nećeš ni primetiti. Uverila si me u suprotno, tako lepa devojka,
-						a opet tako normalna, realna. Dokazala si mi da jedna osoba poput tebe ne mora svaki vikend da izlazi, valjda malo imam predrasude prema lepim devojkama, aku tu su ih oborila. A cak i voliš Partizan. 
-						Imamo dosta toga zajedničkog i lepo se lažemo, bar ja mislim da je tako.
-						Ponekad sam tužan jer ne mogu baš da te pozovem u šetnju, na piće, bilo gde, ali šta ću 300km nije malo. Bar sam srećan kada maštam o tome kako ću te nekad upoznati. Pored svega od
+						a opet tako normalna, realna. Dokazala si mi da jedna osoba poput tebe ne mora svaki vikend da izlazi, valjda malo imam predrasude prema lepim devojkama, aku tu su ih oborila. A čak i voliš Partizan. 
+						Imamo dosta toga zajedničkog i lepo se slažemo, bar ja mislim da je tako.
+						Ponekad sam tužan jer ne mogu baš da te pozovem u šetnju, na piće, bilo gde, ali šta ću 300km nije malo. Bar sam srećan kada maštam o tome kako ću te nekad upoznati, zagrliti... Pored svega od
 						kada smo se upoznali osećam se bolje u svakom smislu, motivisan sam za život. Mislim da je to do tvog pogleda na život koji si pomalo prenela i na mene. Ovo je mali znak pažnje od mene. Nije puno, ali je od srca.
 						Iskoristio sam ovaj dan kao povod da nešto uradim za tebe. Volim ja to tako. Jeste da sam ovaj sajt zamišljao drugačije, ali moje znanje web programiranja nije toliko, nadam se da će i ovo poslužiti. Srećan dan 
 						žena Petra, tebi i tvojoj mami takodje.</p>
